--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="lib/style-ex.css">
-  <title>Manage website link</title>
+  <title>Awesom Saveing time</title>
 </head>
 
 <body>
